# sead_bugs_import

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.bash  pom.xml  run_import.bash
bugsdata/: bugsdata-missing-fks.sql  bugsimport
bugsdata/test_data/: bugsdata_20221003_schema.sql  bugsdata_20230206_schema.sql  bugsdata_samp000546_extra_20230219_105325.sql  bugsdata_samp000546_extra_schema.sql  bugsdata_schema_msaccess.sql  bugsdata_schema_postgressql.sql  debug_taxa_duplicates.sql  samp000546.sql
configuration/: application.properties  pom.xml
doc/: Bugs import Erik mindmup mindmap.json  Bugs import Erik mindmup mindmap.mup  Bugs to SEAD Toby Import_Flow_PIB.odt  bugs import mapping description.docx  design_overview.vsdx  mindmap.json  mindmap.md  mindmap.yaml  mindmup.md
docker/: Dockerfile  Makefile  application.properties.template  bugsimport  docker-entrypoint.sh
scripts/: copy-table  import-bugs-database.sh  run_import.bash  staging-without-submissions
sql/: AdditionsToSeadDataForBugsImport.sql  bugs_import_schema.sql
src/main/resources/: application.H2.properties  application.postgresql.properties  application.properties
src/sql/: 00_bugs_setup_staging_database.psql  01_bugs_import_schema.psql  bugsImportTranslations.sql  importChecks.sql  setup_new_target_database.bash
src/sql/tmp/: 99_diffs_empty_vs_bugs2018.sql  functions_in_bugs2018.sql  (+1 more)
src/test/scaffolding/: bugsdata_empty.py  mdb-sql.py  pyproject.toml
test/resources/: application-test.properties  attributes.mdb  databasemodel.sql
(+1345 files in other folders)
