[tool.poetry]
name = "scaffolding"
version = "0.1.0"
description = ""
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jaydebeapi = "^1.2.3"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
